[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "chainlit>=2.5.5",
    "chromadb>=1.0.11",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
]
